# ops-jobs

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  gunicorn_config.py  k8s-gpu-scheduling-guide.md  manage.py  pyproject.toml  pytest.ini  requirements-test.txt  run.txt  start.bat  start_all.py  start_all.sh  stop.bat
agent/agent-go/: README.md  go.mod  go.sum
agent/agent-server-go/: .gitignore  README.md  go.mod  go.sum
apps/accounts/: admin.py  apps.py  models.py  pagination.py  serializers.py  urls.py  utils.py  views.py
apps/agents/: admin.py  agent_server_views.py  apps.py  execution_service.py  execution_strategies.py  filters.py  (+14 more)
docker/: entrypoint.sh  supervisor.conf
docs/: agent_architecture.md  agent_cmdb_min_plan.md  agent_quickstart.md  agent_server_architecture.md  cloud_sync_setup.md
frontend/: .env.development  README.md  env.d.ts  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
images/: arch.mmd
ops_job/: __init__.py  asgi.py  celery.py  settings_backup.py  urls.py  wsgi.py
utils/: agent_install_sse_views.py  agent_server_auth.py  agent_server_client.py  audit_mixin.py  audit_service.py  cache_key_constructors.py  captcha_serializers.py  captcha_urls.py  captcha_views.py  exception_handler.py  execution_id.py  log_archive_service.py  log_consumer_service.py  pagination.py  realtime_logs.py  redis_stream_consumer.py  responses.py  sse_views.py  task_result_waiter.py  tasks.py  test_base.py  thread_pool.py  urls.py  validators.py
(+306 files in other folders)
